--- a/app/src/main/res/layout/recyclerview_adapter.xml
+++ b/app/src/main/res/layout/recyclerview_adapter.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content">
 
     <TextView
-        android:id="@+id/textViewMovieName"
+        android:id="@+id/title"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:padding="5dp"
