--- a/app/src/main/res/layout/recyclerview_adapter.xml
+++ b/app/src/main/res/layout/recyclerview_adapter.xml
@@ -1,14 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    android:paddingBottom="30dp"
 
-    <TextView
-        android:id="@+id/title"
+    >
+
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="80dp"
+        android:layout_height="120dp"
+        android:scaleType="centerCrop" />
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:padding="5dp"
-        android:gravity="center_vertical"
-        android:layout_weight="1"
-        android:text="TextView" />
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:paddingLeft="10dp"
+        >
+
+        <TextView
+            android:id="@+id/title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="TextView"
+            android:textSize="18sp"
+            android:letterSpacing="0.05"
+            android:fontFamily="@font/ubuntubold"
+            android:maxLines="2"
+            android:ellipsize="end"
+            android:textColor="#000"/>
+
+        <RatingBar
+            android:id="@+id/rating"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            style="?android:attr/ratingBarStyleSmall"
+            android:numStars="4"
+            android:rating="5"
+            android:stepSize="0.1"
+            android:isIndicator="true"
+            android:paddingBottom="5dp"
+            />
+        <TextView
+            android:id="@+id/overView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="TextView"
+            android:textSize="14sp"
+            android:letterSpacing="0.05"
+            android:fontFamily="@font/ubuntumedium"
+            android:textColor="#D2D1E1"
+            android:maxLines="2"
+            android:ellipsize="end"
+            android:paddingBottom="5dp"
+            />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Read more"
+            android:textSize="14sp"
+            android:letterSpacing="0.05"
+            android:fontFamily="@font/ubuntubold"
+            android:textColor="#8785A4" />
+    </LinearLayout>
+
 </LinearLayout>
