--- a/app/src/main/res/layout/recyclerview_adapter.xml
+++ b/app/src/main/res/layout/recyclerview_adapter.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:paddingBottom="30dp"
-
+    android:id="@+id/recyclerItem"
     >
 
 
@@ -40,7 +40,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             style="?android:attr/ratingBarStyleSmall"
-            android:numStars="4"
+            android:numStars="5"
             android:rating="5"
             android:stepSize="0.1"
             android:isIndicator="true"
