--- a/app/src/main/res/layout/recyclerview_adapter.xml
+++ b/app/src/main/res/layout/recyclerview_adapter.xml
@@ -4,69 +4,46 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    android:paddingBottom="30dp"
+    android:orientation="vertical"
+    android:layout_margin="10dp"
+    android:paddingBottom="20dp"
     android:id="@+id/recyclerItem"
     >
 
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="80dp"
-        android:layout_height="120dp"
-        android:scaleType="centerCrop" />
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:scaleType="fitXY"
+ />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:paddingLeft="10dp"
-        >
+        android:background="#000"
+        android:orientation="vertical">
+
+        <RatingBar
+            android:id="@+id/ratingBar"
+            style="?android:attr/ratingBarStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:numStars="5"
+            android:rating="4" />
 
         <TextView
             android:id="@+id/title"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="TextView"
-            android:textSize="18sp"
-            android:letterSpacing="0.05"
-            android:fontFamily="@font/ubuntubold"
-            android:maxLines="2"
-            android:ellipsize="end"
-            android:textColor="#000"/>
-
-        <RatingBar
-            android:id="@+id/rating"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            style="?android:attr/ratingBarStyleSmall"
-            android:numStars="5"
-            android:rating="5"
-            android:stepSize="0.1"
-            android:isIndicator="true"
-            android:paddingBottom="5dp"
-            />
-        <TextView
-            android:id="@+id/overView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="TextView"
-            android:textSize="14sp"
-            android:letterSpacing="0.05"
-            android:fontFamily="@font/ubuntumedium"
-            android:textColor="#D2D1E1"
-            android:maxLines="2"
             android:ellipsize="end"
-            android:paddingBottom="5dp"
-            />
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Read more"
-            android:textSize="14sp"
+            android:fontFamily="@font/ubunturegular"
             android:letterSpacing="0.05"
-            android:fontFamily="@font/ubuntubold"
-            android:textColor="#8785A4" />
+            android:maxLines="1"
+            android:text="TextView"
+            android:textColor="#fff"
+            android:textSize="14sp" />
+
     </LinearLayout>
 
 </LinearLayout>
