--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -23,10 +23,10 @@
         android:id="@+id/title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Aquaman"
         android:textColor="#fff"
         android:fontFamily="@font/ubuntumedium"
         android:paddingBottom="10dp"
+        android:textAlignment="center"
         android:textSize="26dp" />
 
     <TextView
