--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -1,20 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="#000" >
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="#000"
-    tools:context=".MovieDetailsActivity">
+    android:orientation="vertical">
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
     <ImageView
         android:id="@+id/bgImage"
         android:layout_width="match_parent"
-        android:layout_height="266dp"
+        android:layout_height="450dp"
         android:scaleType="centerCrop" />
         <View
             android:layout_width="match_parent"
@@ -39,13 +42,6 @@
         android:textAlignment="center"
         android:textSize="26dp" />
 
-    <TextView
-        android:id="@+id/overview"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textColor="#fff"
-        android:fontFamily="@font/ubuntulight"
-        android:textSize="15dp" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -117,4 +113,13 @@
         </LinearLayout>
 
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/overview"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textColor="#fff"
+        android:fontFamily="@font/ubuntulight"
+        android:textSize="15dp" />
 </LinearLayout>
+</ScrollView>
