--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -17,7 +17,7 @@
     <ImageView
         android:id="@+id/bgImage"
         android:layout_width="match_parent"
-        android:layout_height="450dp"
+        android:layout_height="280dp"
         android:scaleType="centerCrop" />
         <View
             android:layout_width="match_parent"
@@ -32,16 +32,6 @@
         android:layout_height="match_parent"
         android:padding="20dp"
         android:orientation="vertical">
-    <TextView
-        android:id="@+id/title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textColor="#fff"
-        android:fontFamily="@font/ubuntumedium"
-        android:paddingBottom="10dp"
-        android:textAlignment="center"
-        android:textSize="26dp" />
-
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -111,15 +101,16 @@
             </LinearLayout>
 
         </LinearLayout>
+        <TextView
+            android:id="@+id/overview"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="#fff"
+            android:fontFamily="@font/ubuntulight"
+            android:paddingTop="20dp"
+            android:textSize="15dp" />
 
     </LinearLayout>
 
-    <TextView
-        android:id="@+id/overview"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textColor="#fff"
-        android:fontFamily="@font/ubuntulight"
-        android:textSize="15dp" />
 </LinearLayout>
 </ScrollView>
