--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -13,7 +13,7 @@
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
     <ImageView
         android:id="@+id/bgImage"
         android:layout_width="match_parent"
@@ -29,7 +29,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:padding="20dp"
         android:orientation="vertical">
 
@@ -109,6 +109,13 @@
             android:fontFamily="@font/ubuntulight"
             android:paddingTop="20dp"
             android:textSize="15dp" />
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/reviewAdapter"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
+            />
 
     </LinearLayout>
 
